--- a/src/Components/Textbox/textBox.css
+++ b/src/Components/Textbox/textBox.css
@@ -74,6 +74,11 @@
     #answer {
         font-size: 2rem;
     }
+
+    #message{
+        font-size: 20px;
+    }
+
 }
 
 
@@ -85,7 +90,7 @@
 
     .entire-textBox {
         position: absolute;
-        top: 55%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
@@ -93,7 +98,6 @@
     #answer {
         font-size: 1.5rem;
     }
-
 }
 
 @media screen and (max-width: 320px) {
