changed privacy page

--- a/src/App/privacy.css
+++ b/src/App/privacy.css
@@ -7,7 +7,7 @@
 
 .privacy-div{
     color: white;
-    padding-top: 5rem;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
