changed website name

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -48,7 +48,7 @@
   
 
     #website-name{
-        color:white;
+        color:#c3073f;
         font-size: 2rem;
         font-family: 'Poppins', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     }
