--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -25,7 +25,7 @@ button {
 .keyboard-grid {
     display: grid;
     grid-template-columns: repeat(10, minmax(3rem, 1fr));
-    grid-template-rows: repeat(4, minmax(3rem, 1fr));
+    grid-template-rows: repeat(4, minmax(3.5rem, 1fr));
    
 }
 
@@ -60,8 +60,8 @@ button {
         bottom: 0;
     }
     .keyboard-grid {
-        grid-template-columns: repeat(10, minmax(2.4rem, 3rem));
-        grid-template-rows: repeat(4, minmax(2.5rem, 4.2rem));
+        grid-template-columns: repeat(10, minmax(2.2rem, 3rem));
+        grid-template-rows: repeat(4, minmax(2.5rem, 4rem));
         grid-gap: 2px;
     }
 
@@ -76,7 +76,7 @@ button {
 
 
     .keyboard-grid {
-        grid-template-columns: repeat(10, minmax(2rem, 2.5rem));
+        grid-template-columns: repeat(10, minmax(1.5rem, 2.5rem));
         grid-template-rows: repeat(4, minmax(1.7rem, 3rem));
     }
 
@@ -97,7 +97,14 @@ button {
         font-size: 15px;
     }
 }
+@media screen and (max-width: 280px){
+    .keyboard-grid {
+        grid-template-columns: repeat(10, minmax(1.5rem, 3rem));
+        grid-template-rows: repeat(4, minmax(1.5rem, 3rem));
+    }
 
+    
+}
 @media screen and (min-height: 800px) and (min-width: 700px) {
 
     .keyboard-grid {
