--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -102,19 +102,26 @@ button {
         grid-template-columns: repeat(10, minmax(1.5rem, 3rem));
         grid-template-rows: repeat(4, minmax(1.5rem, 3rem));
     }
-
-    
 }
+
+@media screen and (max-height: 580px){
+    .keyboard-grid {
+        grid-template-columns: repeat(10, minmax(1.5rem, 3rem));
+        grid-template-rows: repeat(4, minmax(1.5rem, 2.5rem));
+    }
+}
+
 @media screen and (min-height: 800px) and (min-width: 700px) {
 
     .keyboard-grid {
-        grid-template-columns: repeat(10, minmax(4rem, 1fr));
-        grid-template-rows: repeat(4, minmax(4rem, 1fr));
+        grid-template-columns: repeat(10, minmax(4.5rem, 1fr));
+        grid-template-rows: repeat(4, minmax(4.5rem, 1fr));
     }
 
     button {
         font-size: 18px;
-        border-radius: 7px;
+        border-radius: 10px;
 
     }
 }
+
