--- a/src/Components/Timer/timer.css
+++ b/src/Components/Timer/timer.css
@@ -34,3 +34,13 @@
     }
 
 }
+
+
+@media screen  and (max-height: 580px){
+    #time{
+        font-size: 2rem;
+    }
+    #guessed{
+        font-size: 1rem;
+    }
+}
