--- a/src/App/App.css
+++ b/src/App/App.css
@@ -16,11 +16,11 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+    
 }
 
 #duplicate-timer {
