--- a/src/Components/GameOverPopUp/popUp.css
+++ b/src/Components/GameOverPopUp/popUp.css
@@ -28,7 +28,11 @@
 #guessed-number{
     padding-top: 0.5rem;
 }
-
+#building-img{
+    width: 50%;
+    height: 62%;
+    padding-left: 5px;
+}
 #restart{
     position: absolute;
     border: 2px solid white;
@@ -48,11 +52,17 @@
 @media screen and (max-width: 480px) {
     #popUp-box{
         width: 80%;
-        height: 30%;
+        height: 40%;
         position: absolute;
         top:35%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    #building-img{
+        width: 50%;
+        height: 50%;
+        padding-left: 5px;
     }
 }
 
@@ -63,6 +73,11 @@
         font-size: 1rem;
     }
 
+    #building-img{
+        width: 50%;
+        height: 50%;
+        margin-top: 12px;
+    }
     
 }
 
