--- a/src/Components/GameOverPopUp/popUp.css
+++ b/src/Components/GameOverPopUp/popUp.css
@@ -80,6 +80,28 @@
     }
     
 }
+@media screen and (max-width: 480px) and (min-height: 650px){
+    #building-img{
+        width: 50%;
+        height: 50%;
+        margin-top: 12px;
+    }
+}
+@media screen and (max-width: 320px) and (min-height: 650px){
+    #building-img{
+        width: 50%;
+        height: 60%;
+        margin-top: 12px;
+        padding-top: 20px;
+    }
+}
+
+@media screen and (max-height: 550px){
+        #building-img{
+            width: 50%;
+            height: 30%;
+        }
+    }
 
 @media screen and (min-height: 800px) and (min-width: 1000px) {
    
@@ -100,3 +122,4 @@
         font-size: 1.5rem;
     }
 }
+
