animated building button

--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -83,6 +83,7 @@ button {
     justify-content: center;
     align-items: center;
     font-size: 21px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
