Removed unnecessary email link

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -9,6 +9,12 @@
     height: 2.87rem;
 }
 
+#contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 #flexable-footer {
     padding: 7.5px;
